# EchoStack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ci.yml  pyproject.toml  test_cli.py
.github/workflows/: ci.yml
docs/: CLAIM_SCHEMA.md  E_STRICT_AUDIT.md  SPEC.md
echostack/: audit.py  claim.py  cli.py  validation.py
echostack/examples/: adversarial_well_formed.yml  invalid_missing_fields.yml  qed_alpha_claim.yml  qhigt_alpha_claim.yml  standard_model_alpha_claim.yml
echostack/schemas/: claim_schema.json  claim_schema.yml
installation/: INSTALL.md  install_dev.sh  install_minimal.sh  verify.sh
tests/: test_cli.py
